@@ -56,6 +56,7 @@
        the filter string. (Stefan)
 - NEW: Column in the check-for-modifications dialog to show 
        the lock date. (Stefan)
+- NEW: Context menu to delete and ignore files at the same time. (Stefan)
 - CHG: The bug-ID column width in the log dialog is now limited 
        to 200 pixels. (Stefan)
 - CHG: The right-drag context menu now only shows "Export" if a versioned
